fix header align

--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -16,6 +16,7 @@
   font-family: var(--caption-font);
   text-transform: uppercase;
   font-size: 0.8em;
+  z-index: 11;
 }
 .nav__list {
   display: none;
@@ -35,7 +36,6 @@
   .nav {
   }
   .nav__inner {
-    margin-left: 70px;
   }
   .nav__list {
     padding: 0 20px 0 20px;
